<resources>
    <string name="app_name">MarketPrice</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="content_title">Market Price</string>
    <string name="content_text">xruu</string>
    <string name="big_text">This is a big text</string>

    <string name="price_title">SBR</string>
    <string name="price_data">Сбербанк</string>
    <string name="item_diffLastDay_text">0%</string>
    <string name="item_price_text">00.00</string>
    <string name="item_shortname_text">SBR</string>
    <string name="item_name_text">Сбербанк</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="statictics">statictics</string>
    <string name="graph">graph</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_select">Сортировать по:</string>
    <string name="details_secName">АО Сбербанк</string>
    <string name="details_secName_title">Name</string>
    <string name="details_valToDay">34220000000</string>
    <string name="details_valToDay_title">trade volume to day</string>
    <string name="details_open">196.25</string>
    <string name="details_change">3.20</string>
    <string name="details_change_title">change to day</string>
    <string name="details_open_title">open price</string>
    <string name="details_low">191.36</string>
    <string name="details_low_title">min price to day</string>
    <string name="details_changePercent">+1.14%</string>
    <string name="details_changePercent_title">change to day (%)</string>
    <string name="details_high_title">max price to day</string>
    <string name="details_high">201.11</string>
    <string name="details_last">196.25</string>
    <string name="details_last_title">current price</string>
    <string name="details_secId">SBER</string>
    <string name="details_secId_title">ticker</string>
</resources>
